--- a/ex5-form.html
+++ b/ex5-form.html
@@ -14,24 +14,24 @@
         <form>
             <div class="row g-3">
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
-                    <label for="fullName">Full Name</label>
+                    <label for="fullName" class="form-label">Full Name</label>
                     <input type="text" id="fullName" class="form-control">
                 </div>
 
                 <!-- Email -->
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
-                    <label for="email">Email address</label>
+                    <label for="email" class="form-label">Email address</label>
                     <input type="email" id="email" class="form-control">
                 </div>
 
                 <!-- Gender -->
                 <div class="col-12 col-md-6 col-lg-4 mb-3">
                     <label class="form-label d-block">Gender</label>
-                    <div class="form-check form-check-inline">
+                    <div class="form-check d-inline-block me-3">
                         <input type="radio" class="form-check-input" name="gender" id="male" value="male">
                         <label for="male" class="form-check-label">Male</label>
                     </div>
-                    <div class="form-check form-check-inline">
+                    <div class="form-check d-inline-block">
                         <input type="radio" class="form-check-input" name="gender" id="female" value="female">
                         <label for="female" class="form-check-label">Female</label>
                     </div>
@@ -49,7 +49,7 @@
                 </div>
 
                 <!-- Subscribe -->
-                <div class="mb-3 col-12 col-lg-4">
+                <div class="mb-3 col-4">
                     <div class="mt-4 form-check">
                         <input type="checkbox" id="subscribe" class="form-check-input">
                         <label for="subscribe" class="form-check-label">
